# e2e-mlops

./: .gitignore  LICENSE  Makefile  README.md  app.py  cli.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yaml  ingest.yaml  train.yaml
apps/: server.py
configs/: inference_config.yaml  infrastructure_config.yaml  model_config.yaml
data/: app_test_data.csv  ground_truth_2024_11_07_18_57_27.csv  test.csv  train.csv
pipelines/: __init__.py  cleaning.py  deployment.py  inference.py  ingestion.py  monitoring.py  training.py
scripts/: evaluate.py  requirements.txt  train.py
steps/: __init__.py  cleaner.py  condition.py  deployer.py  evaluator.py  loader.py  monitor.py  predictor.py  registerer.py  splitter.py  trainer.py  uploader.py
tests/: ingestion_test.py
utils/: constants.py  helper.py
